--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -13,7 +13,7 @@
         chdir: /var/lib/jenkins/workspace/petshop-job
 
     - name: tag image
-      command: docker tag petstore:latest gouserabbani/petstore:latest 
+      command: docker tag petstore gouserabbani/petstore:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
