--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -13,16 +13,16 @@
         chdir: /var/lib/jenkins/workspace/petshop-job
 
     - name: tag image
-      command: docker tag petstore gouserabbani/petstore:latest 
+      command: docker tag petstore sameerdock/petstore:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
-        username: gouserabbani
+        username: sameerdock
         password: dckr_pat_ifcqnkfAvhxocECAXe_RynDaJu8
 
     - name: Push image
-      command: docker push gouserabbani/petstore:latest
+      command: docker push sameerdock/petstore:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 gouserabbani/petstore:latest
+      command: docker run -d --name pet1 -p 8081:8080 sameerdock/petstore:latest
